--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.simpleunit</groupId>
 	<artifactId>simpleunit</artifactId>
-	<version>0.5-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>SimpleUnit</name>
 
 	<dependencies>
